# AI-Based-CI-CD-pipeline-Failure-Analyzer

./: Dockerfile  README.md  analyzer.py  app.py  database.py  docker-compose.yml  jenkins_client.py  mock_data_generator.py  pyproject.toml  sync_jenkins_data.py
artifacts/: project_documentation.md
instance/: analyzer.db
static/css/: style.css
static/js/: main.js
templates/: base.html  build_details.html  builds.html  dashboard.html  landing.html  login.html  signup.html
