[tool.poetry]
package-mode = false
name = "pipeline-failure-analyzer"
version = "0.1.0"
description = "CI/CD Pipeline Failure Analyzer"
authors = ["Satoru <user@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
requests = "^2.31.0"
SQLAlchemy = "^2.0.25"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
openai = "^2.29.0"
mcp = "^1.26.0"
google-genai = "^1.68.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
